--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "winston-daily-rotate-file": "^1.4.6"
   },
   "devDependencies": {
+    "@types/node": "^20.4.8",
     "babel-cli": "6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
@@ -45,7 +46,7 @@
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-react": "^6.4.1",
     "mocha": "^6.2.0",
-    "nodemon": "^1.9.1",
+    "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   },
   "eslintConfig": {
